<resources>
    <string name="app_name">MYAPDB</string>
    <string name="title_activity_menu2">Menu2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_foro">Foro</string>
    <string name="menu_MONGODB">MONGO DB</string>
    <string name="menu_PostgreSQL">PostgreSQL</string>
    <string name="menu_MySQL">MySQL</string>
    <string name="menu_SQLServer">SQLServer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sql_title_basededatos">BASE DE DATOS</string>
    <string name="sql_detail_basededatos">Creacion de Base de Datos\n
    Colocar el nombre distintivo, no colocar “DBVENTAS” si hacemos esto es redundante, lo Correcto es “VENTAS” debido al entorno se entiende que será(es) una base de datos.</string>
    <string name="sql_title_tablas">TABLAS</string>
    <string name="sql_detail_tablas">Creación de Tablas\n
    Podemos utilizar la nomenclatura under_score la cual se refiere que esta nomenclatura los objetos se pueden nombrar haciendo uso de palabras separadas por un guion medio.
    Ejemplo: “correo_clientes”, “detalle_ventas”\n\n

        Podemos utilizar el CamelCase el cual se refiere donde se delimitan por medio de una mayúscula.\n\n
        Ejemplo: “CorreoClientes”, “DetalleVentas”</string>
    <string name="sql_title_Campos">CAMPOS</string>
    <string name="sql_detail_Campos">Nombrando Campos\n
    Se aplica mismo criterio de nomenclatura que se expuso para nombrar tablas. Se usa nombres con significado y en la extensión que consideremos necesaria.\n\n
    Ejemplo: tabla “detalle_ventas”\n
    codigo_venta\n
    cantidad_venta\n
    direccion_venta</string>
    <string name="sql_title_tipoDatos">TIPO DE DATOS</string>
    <string name="sql_detail_tipoDatos">Al momento dar tipos de datos a los campos de las tablas se utilizan:\n\n
    Para cadenas de caracteres ---> nvarchar.\n
    Para almacenar un carácter ----> char\n
    Para datos enteros ------> int\n
    Para datos de fecha -----> date\n
    Para datos en decimales -------> decimal</string>
    <string name="sql_title_relaciones">RELACIONES</string>
    <string name="sql_detail_relaciones">Todas las llaves foráneas deben de ser del mismo tipo de dato y longitud que la llave primaria a la que hace referencia.</string>
    <string name="sql_title_Select">SENTENCIA SELECT</string>
    <string name="sql_detail_Select">Permite seleccionar las columnas que se van a mostrar y en el orden en que lo van a hacer. Simplemente es la instrucción que la base de datos interpreta como que vamos a solicitar información.\n\n
    No utiliza “ SELECT * ”\n\n
    Ejemplo Correcto:\n
    SELECT    d.nombre_departamento\n
        , d.locacion\n
    FROM     Departmento AS d\n\n

Esto hace pedir de forma puntal la información, y agiliza el proceso de consulta</string>
    <string name="sql_title_insert">SENTENCA INSERT</string>
    <string name="sql_detail_insert">La sintaxis INSERT para crear un nuevo registro es la siguiente:\n\n

        INSERT INTO NombreTabla [(Campo1, …, CampoN)] VALUES (Valor1, …, ValorN)\n\n

        Ejemplo: INSERT INTO detalle_venta[ código_venta] VALUES (2)</string>
    <string name="sql_title_update">SENTENCIA UPDATE</string>
    <string name="sql_detail_update">La sentencia UPDATE se utiliza para modificar valores en una tabla.\n\n

        La sintaxis de SQL UPDATE es:\n\n

        UPDATE nombre_tabla\n
        SET columna1 = valor1, columna2 = valor2\n
        WHERE columna3 = valor3\n\n

De una manera liviana para poder agilizar la actualización.</string>
    <string name="sql_title_delete"><b>SENTENCIA DELETE</b></string>
    <string name="sql_detail_delete">
        La instrucción DELETE permite eliminar uno o múltiples registros.\n
        Incluso todos los registros de una tabla, dejándola vacía.\n\n
        Su sintaxis es general es:\n\n
        <i>DELETE [FROM] NombreTabla\n
        WHERE Condición</i>\n\n
        La condición, como siempre, define las condiciones que deben cumplir los registros que se desean eliminar.</string>
    <string name="mysql_title_MySQL">MySQL</string>
    <string name="mysql_detail_mysql">
        MySQL es el sistema de gestión de bases de datos relacional más extendido en la actualidad
        al estar basada en código abierto. Desarrollado originalmente por MySQL AB, fue adquirida
        por Sun MicroSystems en 2008 y esta su vez comprada por Oracle Corporation en 2010, la cual
        ya era dueña de un motor propio InnoDB para MySQL.\n\n
        MySQL es un sistema de gestión de bases de datos que cuenta con una doble licencia.
        Por una parte, es de código abierto, pero por otra, cuenta con una versión comercial
        gestionada por la compañía Oracle.
    </string>
    <string name="mysql_title_nomenclatura">Convención de Nomenclatura</string>
    <string name="mysql_detail_nomenclatura">
        Reglas Generales\n\n
    Ten en cuenta las siguientes reglas para evitar problemas.\n
    	Utiliza minúsculas ya que le ayuda en la velocidad de la escritura, evitará errores en caso de funciones sensibles a minúsculas y mayúsculas, etc.\n
    	No uses espacios en blanco, use el guion bajo (_) en su lugar.\n
    	No uses números en los nombres, solo caracteres alfabéticos ingleses.\n
    	Utiliza nombres comprensibles válidos.\n
    	Los nombres deben explicarse por sí mismo.\n
    	Los nombres no deben contener más de 64 caracteres.\n
    	Evita usar prefijos.\n
</string>
    <string name="mysql_title_bdatos">Reglas para los nombres de base de datos</string>
    <string name="mysql_detail_bdatos">
        Siga todas las reglas generales anteriores.\n
        El nombre puede ser a la vez singular y plural, pero la base de datos 
        representa una base de datos por lo que debe ser singular en lo posible.\n\n
        Evitar prefijos en lo posible.
    </string>
    <string name="mysql_title_nametablas">Reglas para los nombres de las tablas</string>
    <string name="mysql_detail_nametablas">
        Use minúscula para los nombres de las tablas: MySQL es usualmente alojado en servidores
        Linux, es sensible a mayúsculas por lo que mejor práctica es poner los nombres de las tablas en
        minúsculas.\n\n
        •	Los nombres de las tablas deben ir en singular: la tabla es una sola entidad así como
        lo es el modelo por lo que es extraño tener el nombre de la tabla en plural.\n
        •	Prefijos en el nombre de la tabla: Hemos visto muchas veces que las tablas tienen
        como prefijo el nombre de la base de datos o el nombre del proyecto. Algunas veces
        esto es necesario cuando en nuestro proyecto tenemos muchas bases de datos para
        superar la limitación de algunos proveedores de hosting. Pero si no es necesario
        y nuestro proyecto es pequeño evite usar prefijos.
    </string>
    <string name="mysql_title_namecampos">Nombre de los campos</string>
    <string name="mysql_detail_namecampos">
        Utilice todas las reglas anteriores, es decir, usar minúsculas, no utilizar espacios en blanco, 
        no usar números, y evitar prefijos.\n\n
•	Usa una o dos palabras cortas en lo posible.\n
•	Los nombres de los campos deben ser capaces de entenderse por ejemplo: precio, nombre_empresa, etc.\n
•	Nombre de la columna primaria: La clave principal puede tener el nombre de id o el nombre de la tabla _id. 
        Eso dependerá de la elección.\n
•	Evita el uso de palabras reservadas en los campos: *****, date, etc. 
        En estos casos es preferible usar prefijos como registro_date, etc.\n
•	Evita el uso de nombre de columnas con el mismo nombre de la tabla. 
        Esto puede causar confusión al escribir las consultas.\n
•	Evita nombres en siglas abreviadas o concatenadas
    </string>
    <string name="mysql_title_tipodatos">Tipos de datos adecuados</string>
    <string name="mysql_detail_tiposdatos">
        Usa tipos de datos en base a la naturaleza de los datos. 
        Si utilizas tipos de datos irrelevantes esto puede consumir más espacio o puede dar lugar a errores.\n
        Ejemplo:\n\n
        El uso de varchar(20) para almacenar valores de fecha y hora, en lugar de DATETIME 
        esto puede dar errores durante los cálculos de los tiempos relacionados con la fecha 
        y también es posible en el caso de almacenamiento de datos no válidos.

    </string>
    <string name="mysql_title_usoChar">Uso CHAR sobre VARCHAR </string>
    <string name="mysql_detail_usoChar">
        Si almacenaras una sola cadena de caracteres, utiliza CHAR(1) en lugar de VARCHAR(1) porque
        VARCHAR(1) se llevará un byte adicional para almacenar información. Con lo que tenerlo en
        cuenta a la hora de gestionar estos caracteres.\n\n
     CHAR para datos fijos.\n
     Use datos tipo CHAR para almacenar solo los datos de longitud fija.\n\n
        Ejemplo:\n
        Usando CHAR(1000) en lugar de VARCHAR(1000) consume más espacio si la longitud de los datos es inferior a 1000.
    </string>
    <string name="mysql_title_stopselect">Evite el uso de “SELECT *” en sus consultas</string>
    <string name="mysql_detail_stopselect">
        Como regla general, cuanto más se leen los datos de las tablas, más lento se hace una consulta. 
        Teniendo en cuenta que algunas tablas de producción pueden contener decenas de columnas, algunas 
        de las cuales se compone de grandes tipos de datos, sería imprudente seleccionarlas todas.\n\n
 
        Es un buen hábito especificar las columnas necesarias en su instrucción SELECT
    </string>
    <string name="mysql_title_exist">Use la cláusula "EXISTS" siempre que sea necesario</string>
    <string name="mysql_detail_exist">
        Si desea comprobar la existencia de datos, no utilice:\n
        "If (SELECT count(*) from Table WHERE col='algún valor')>0"\n\n
        A cambio use la cláusula EXISTS:\n\n
        "If EXISTS(SELECT * from Table WHERE col='algún valor')"\n
        Que es más rápido en el tiempo de respuesta.
    </string>
    <string name="mysql_title_insert">INSERT MYSQL</string>
    <string name="mysql_detail_insert">Detalles insert mysql</string>
    <string name="mysql_title_selecfrom">SELEC * FROM </string>
    <string name="mysql_detail_selecfrom">Selec from de una forma basica</string>
    <string name="mysql_title_delete">Sentencia DELETE </string>
    <string name="mysql_detail_delete">DELETE de una forma basica</string>
    <string name="mysql_title_update">SENTENCIA Update </string>
    <string name="mysql_detail_update">update de una forma basica</string>
    <string name="mysql_title_UNO">UNO </string>
    <string name="mysql_detail_UNO">uno</string>
    <string name="mysql_title_DOS"> esto es el DOS</string>
    <string name="mysql_detail_DOS">DOS en un numero positivo</string>
    <string name="postgresql_title_definicion"> POSTGRESQL</string>
    <string name="postgresql_detail_definicion">bcibibvivbroiuv</string>
    <string name="mongo_title_Bdd">Base de datos de documentos</string>
</resources>