<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/nav_SQLServer"
            android:icon="@drawable/sqlserver"
            android:title="@string/menu_SQLServer"
            />
        <item
            android:id="@+id/nav_MySQL"
            android:icon="@drawable/mysql"
            android:title="@string/menu_MySQL"
            android:iconTint="@null"/>
        <item
            android:id="@+id/nav_MONGODB"
            android:icon="@drawable/mongodblogo"
            android:title="@string/menu_MONGODB" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_foro"
            android:icon="@drawable/grupo"
            android:title="@string/menu_foro"
            android:iconTint="@null"/>
    </group>
</menu>